# real-vibe-coding-typescript-public

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  lefthook.yml  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  plan.md  settings.json
.claude/commands/: pr.md
.claude/hooks/: post-edit-check.sh
.claude/rules/: dev.md  documentation.md  domain-context.md  kubernetes.md  project-structure-and-management.md  python-coding-convention.md  skills-rule.md  techspec.md  typescript-coding-convention.md
.claude/skills/adr-skill/: SKILL.md
.claude/skills/config-skill/: SKILL.md
.claude/skills/kubernetes-skill/: SKILL.md
.claude/skills/plan-skill/: SKILL.md
.claude/skills/pyproject-toml-skill/: SKILL.md
.claude/skills/test-skill/: SKILL.md
.claude/tasks/: implement-hello-api.md  todo.md  update-claude-settings.md
.github/: PULL_REQUEST_TEMPLATE.md
config/: pyproject.toml
config/src/my_config/: __init__.py  config_base.py  settings_base.py
config/tests/: __init__.py  test_config_base.py  test_settings_base.py
docs/adr/: ADR-001-base-config-classes-for-config-model-and-application-settings.md
