[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "my-config"
version = "0.1.0"
description = "Shared configuration base module for AIR services"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "my-logger",
]

[tool.uv.sources]
my-logger = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=my_config --cov-report=term-missing"

[tool.coverage.run]
source = ["src/my_config"]
branch = true
